@@ -132,3 +132,7 @@
 [:function, :SUMIFS, [:array, [:row, [:cell, :A1]], [:row, [:cell, :A2]], [:row, [:cell, :A3]]], [:array, [:row, [:string, "A"]], [:row, [:string, "B"]], [:row, [:string, "C"]]], [:blank]]	[:number, 0]
 
 [:arithmetic, [:arithmetic, [:arithmetic, [:function, :SUMIFS, [:array, [:row, [:sheet_reference, :"G.30", [:cell, :I10]]], [:row, [:sheet_reference, :"G.30", [:cell, :I11]]], [:row, [:sheet_reference, :"G.30", [:cell, :I12]]], [:row, [:sheet_reference, :"G.30", [:cell, :I13]]], [:row, [:sheet_reference, :"G.30", [:cell, :I14]]], [:row, [:sheet_reference, :"G.30", [:cell, :I15]]], [:row, [:sheet_reference, :"G.30", [:cell, :I16]]], [:row, [:sheet_reference, :"G.30", [:cell, :I17]]], [:row, [:sheet_reference, :"G.30", [:cell, :I18]]], [:row, [:sheet_reference, :"G.30", [:cell, :I19]]], [:row, [:sheet_reference, :"G.30", [:cell, :I20]]], [:row, [:sheet_reference, :"G.30", [:cell, :I21]]], [:row, [:sheet_reference, :"G.30", [:cell, :I22]]], [:row, [:sheet_reference, :"G.30", [:cell, :I23]]], [:row, [:sheet_reference, :"G.30", [:cell, :I24]]], [:row, [:sheet_reference, :"G.30", [:cell, :I25]]], [:row, [:sheet_reference, :"G.30", [:cell, :I26]]], [:row, [:sheet_reference, :"G.30", [:cell, :I27]]], [:row, [:sheet_reference, :"G.30", [:cell, :I28]]], [:row, [:sheet_reference, :"G.30", [:cell, :I29]]], [:row, [:sheet_reference, :"G.30", [:cell, :I30]]], [:row, [:sheet_reference, :"G.30", [:cell, :I31]]], [:row, [:sheet_reference, :"G.30", [:cell, :I32]]], [:row, [:sheet_reference, :"G.30", [:cell, :I33]]], [:row, [:sheet_reference, :"G.30", [:cell, :I34]]], [:row, [:sheet_reference, :"G.30", [:cell, :I35]]], [:row, [:sheet_reference, :"G.30", [:cell, :I36]]], [:row, [:sheet_reference, :"G.30", [:cell, :I37]]], [:row, [:sheet_reference, :"G.30", [:cell, :I38]]], [:row, [:sheet_reference, :"G.30", [:cell, :I39]]], [:row, [:sheet_reference, :"G.30", [:cell, :I40]]], [:row, [:sheet_reference, :"G.30", [:cell, :I41]]], [:row, [:sheet_reference, :"G.30", [:cell, :I42]]], [:row, [:sheet_reference, :"G.30", [:cell, :I43]]], [:row, [:sheet_reference, :"G.30", [:cell, :I44]]], [:row, [:sheet_reference, :"G.30", [:cell, :I45]]], [:row, [:sheet_reference, :"G.30", [:cell, :I46]]], [:row, [:sheet_reference, :"G.30", [:cell, :I47]]], [:row, [:sheet_reference, :"G.30", [:cell, :I48]]], [:row, [:sheet_reference, :"G.30", [:cell, :I49]]], [:row, [:sheet_reference, :"G.30", [:cell, :I50]]], [:row, [:sheet_reference, :"G.30", [:cell, :I51]]], [:row, [:sheet_reference, :"G.30", [:cell, :I52]]], [:row, [:sheet_reference, :"G.30", [:cell, :I53]]], [:row, [:sheet_reference, :"G.30", [:cell, :I54]]], [:row, [:sheet_reference, :"G.30", [:cell, :I55]]], [:row, [:sheet_reference, :"G.30", [:cell, :I56]]], [:row, [:sheet_reference, :"G.30", [:cell, :I57]]], [:row, [:sheet_reference, :"G.30", [:cell, :I58]]], [:row, [:sheet_reference, :"G.30", [:cell, :I59]]], [:row, [:sheet_reference, :"G.30", [:cell, :I60]]], [:row, [:sheet_reference, :"G.30", [:cell, :I61]]], [:row, [:sheet_reference, :"G.30", [:cell, :I62]]], [:row, [:sheet_reference, :"G.30", [:cell, :I63]]], [:row, [:sheet_reference, :"G.30", [:cell, :I64]]], [:row, [:sheet_reference, :"G.30", [:cell, :I65]]], [:row, [:sheet_reference, :"G.30", [:cell, :I66]]], [:row, [:sheet_reference, :"G.30", [:cell, :I67]]], [:row, [:sheet_reference, :"G.30", [:cell, :I68]]], [:row, [:sheet_reference, :"G.30", [:cell, :I69]]], [:row, [:sheet_reference, :"G.30", [:cell, :I70]]], [:row, [:sheet_reference, :"G.30", [:cell, :I71]]], [:row, [:sheet_reference, :"G.30", [:cell, :I72]]], [:row, [:sheet_reference, :"G.30", [:cell, :I73]]], [:row, [:sheet_reference, :"G.30", [:cell, :I74]]], [:row, [:sheet_reference, :"G.30", [:cell, :I75]]], [:row, [:sheet_reference, :"G.30", [:cell, :I76]]], [:row, [:sheet_reference, :"G.30", [:cell, :I77]]], [:row, [:sheet_reference, :"G.30", [:cell, :I78]]], [:row, [:sheet_reference, :"G.30", [:cell, :I79]]], [:row, [:sheet_reference, :"G.30", [:cell, :I80]]], [:row, [:sheet_reference, :"G.30", [:cell, :I81]]], [:row, [:sheet_reference, :"G.30", [:cell, :I82]]], [:row, [:sheet_reference, :"G.30", [:cell, :I83]]], [:row, [:sheet_reference, :"G.30", [:cell, :I84]]], [:row, [:sheet_reference, :"G.30", [:cell, :I85]]], [:row, [:sheet_reference, :"G.30", [:cell, :I86]]], [:row, [:sheet_reference, :"G.30", [:cell, :I87]]], [:row, [:sheet_reference, :"G.30", [:cell, :I88]]], [:row, [:sheet_reference, :"G.30", [:cell, :I89]]], [:row, [:sheet_reference, :"G.30", [:cell, :I90]]], [:row, [:sheet_reference, :"G.30", [:cell, :I91]]], [:row, [:sheet_reference, :"G.30", [:cell, :I92]]], [:row, [:sheet_reference, :"G.30", [:cell, :I93]]], [:row, [:sheet_reference, :"G.30", [:cell, :I94]]], [:row, [:sheet_reference, :"G.30", [:cell, :I95]]], [:row, [:sheet_reference, :"G.30", [:cell, :I96]]], [:row, [:sheet_reference, :"G.30", [:cell, :I97]]], [:row, [:sheet_reference, :"G.30", [:cell, :I98]]], [:row, [:sheet_reference, :"G.30", [:cell, :I99]]], [:row, [:sheet_reference, :"G.30", [:cell, :I100]]], [:row, [:sheet_reference, :"G.30", [:cell, :I101]]], [:row, [:sheet_reference, :"G.30", [:cell, :I102]]], [:row, [:sheet_reference, :"G.30", [:cell, :I103]]], [:row, [:sheet_reference, :"G.30", [:cell, :I104]]], [:row, [:sheet_reference, :"G.30", [:cell, :I105]]], [:row, [:inlined_blank]], [:row, [:sheet_reference, :"G.30", [:cell, :I107]]], [:row, [:sheet_reference, :"G.30", [:cell, :I108]]], [:row, [:sheet_reference, :"G.30", [:cell, :I109]]], [:row, [:sheet_reference, :"G.30", [:cell, :I110]]], [:row, [:sheet_reference, :"G.30", [:cell, :I111]]], [:row, [:sheet_reference, :"G.30", [:cell, :I112]]], [:row, [:sheet_reference, :"G.30", [:cell, :I113]]], [:row, [:sheet_reference, :"G.30", [:cell, :I114]]], [:row, [:sheet_reference, :"G.30", [:cell, :I115]]], [:row, [:sheet_reference, :"G.30", [:cell, :I116]]], [:row, [:sheet_reference, :"G.30", [:cell, :I117]]], [:row, [:sheet_reference, :"G.30", [:cell, :I118]]], [:row, [:sheet_reference, :"G.30", [:cell, :I119]]], [:row, [:sheet_reference, :"G.30", [:cell, :I120]]], [:row, [:sheet_reference, :"G.30", [:cell, :I121]]], [:row, [:sheet_reference, :"G.30", [:cell, :I122]]]], [:error, :"#REF!"], [:string, "Steel.Oxygen"], [:error, :"#REF!"], [:string, "G.M.02"]], [:operator, :+], [:function, :SUMIFS, [:array, [:row, [:sheet_reference, :"G.30", [:cell, :I10]]], [:row, [:sheet_reference, :"G.30", [:cell, :I11]]], [:row, [:sheet_reference, :"G.30", [:cell, :I12]]], [:row, [:sheet_reference, :"G.30", [:cell, :I13]]], [:row, [:sheet_reference, :"G.30", [:cell, :I14]]], [:row, [:sheet_reference, :"G.30", [:cell, :I15]]], [:row, [:sheet_reference, :"G.30", [:cell, :I16]]], [:row, [:sheet_reference, :"G.30", [:cell, :I17]]], [:row, [:sheet_reference, :"G.30", [:cell, :I18]]], [:row, [:sheet_reference, :"G.30", [:cell, :I19]]], [:row, [:sheet_reference, :"G.30", [:cell, :I20]]], [:row, [:sheet_reference, :"G.30", [:cell, :I21]]], [:row, [:sheet_reference, :"G.30", [:cell, :I22]]], [:row, [:sheet_reference, :"G.30", [:cell, :I23]]], [:row, [:sheet_reference, :"G.30", [:cell, :I24]]], [:row, [:sheet_reference, :"G.30", [:cell, :I25]]], [:row, [:sheet_reference, :"G.30", [:cell, :I26]]], [:row, [:sheet_reference, :"G.30", [:cell, :I27]]], [:row, [:sheet_reference, :"G.30", [:cell, :I28]]], [:row, [:sheet_reference, :"G.30", [:cell, :I29]]], [:row, [:sheet_reference, :"G.30", [:cell, :I30]]], [:row, [:sheet_reference, :"G.30", [:cell, :I31]]], [:row, [:sheet_reference, :"G.30", [:cell, :I32]]], [:row, [:sheet_reference, :"G.30", [:cell, :I33]]], [:row, [:sheet_reference, :"G.30", [:cell, :I34]]], [:row, [:sheet_reference, :"G.30", [:cell, :I35]]], [:row, [:sheet_reference, :"G.30", [:cell, :I36]]], [:row, [:sheet_reference, :"G.30", [:cell, :I37]]], [:row, [:sheet_reference, :"G.30", [:cell, :I38]]], [:row, [:sheet_reference, :"G.30", [:cell, :I39]]], [:row, [:sheet_reference, :"G.30", [:cell, :I40]]], [:row, [:sheet_reference, :"G.30", [:cell, :I41]]], [:row, [:sheet_reference, :"G.30", [:cell, :I42]]], [:row, [:sheet_reference, :"G.30", [:cell, :I43]]], [:row, [:sheet_reference, :"G.30", [:cell, :I44]]], [:row, [:sheet_reference, :"G.30", [:cell, :I45]]], [:row, [:sheet_reference, :"G.30", [:cell, :I46]]], [:row, [:sheet_reference, :"G.30", [:cell, :I47]]], [:row, [:sheet_reference, :"G.30", [:cell, :I48]]], [:row, [:sheet_reference, :"G.30", [:cell, :I49]]], [:row, [:sheet_reference, :"G.30", [:cell, :I50]]], [:row, [:sheet_reference, :"G.30", [:cell, :I51]]], [:row, [:sheet_reference, :"G.30", [:cell, :I52]]], [:row, [:sheet_reference, :"G.30", [:cell, :I53]]], [:row, [:sheet_reference, :"G.30", [:cell, :I54]]], [:row, [:sheet_reference, :"G.30", [:cell, :I55]]], [:row, [:sheet_reference, :"G.30", [:cell, :I56]]], [:row, [:sheet_reference, :"G.30", [:cell, :I57]]], [:row, [:sheet_reference, :"G.30", [:cell, :I58]]], [:row, [:sheet_reference, :"G.30", [:cell, :I59]]], [:row, [:sheet_reference, :"G.30", [:cell, :I60]]], [:row, [:sheet_reference, :"G.30", [:cell, :I61]]], [:row, [:sheet_reference, :"G.30", [:cell, :I62]]], [:row, [:sheet_reference, :"G.30", [:cell, :I63]]], [:row, [:sheet_reference, :"G.30", [:cell, :I64]]], [:row, [:sheet_reference, :"G.30", [:cell, :I65]]], [:row, [:sheet_reference, :"G.30", [:cell, :I66]]], [:row, [:sheet_reference, :"G.30", [:cell, :I67]]], [:row, [:sheet_reference, :"G.30", [:cell, :I68]]], [:row, [:sheet_reference, :"G.30", [:cell, :I69]]], [:row, [:sheet_reference, :"G.30", [:cell, :I70]]], [:row, [:sheet_reference, :"G.30", [:cell, :I71]]], [:row, [:sheet_reference, :"G.30", [:cell, :I72]]], [:row, [:sheet_reference, :"G.30", [:cell, :I73]]], [:row, [:sheet_reference, :"G.30", [:cell, :I74]]], [:row, [:sheet_reference, :"G.30", [:cell, :I75]]], [:row, [:sheet_reference, :"G.30", [:cell, :I76]]], [:row, [:sheet_reference, :"G.30", [:cell, :I77]]], [:row, [:sheet_reference, :"G.30", [:cell, :I78]]], [:row, [:sheet_reference, :"G.30", [:cell, :I79]]], [:row, [:sheet_reference, :"G.30", [:cell, :I80]]], [:row, [:sheet_reference, :"G.30", [:cell, :I81]]], [:row, [:sheet_reference, :"G.30", [:cell, :I82]]], [:row, [:sheet_reference, :"G.30", [:cell, :I83]]], [:row, [:sheet_reference, :"G.30", [:cell, :I84]]], [:row, [:sheet_reference, :"G.30", [:cell, :I85]]], [:row, [:sheet_reference, :"G.30", [:cell, :I86]]], [:row, [:sheet_reference, :"G.30", [:cell, :I87]]], [:row, [:sheet_reference, :"G.30", [:cell, :I88]]], [:row, [:sheet_reference, :"G.30", [:cell, :I89]]], [:row, [:sheet_reference, :"G.30", [:cell, :I90]]], [:row, [:sheet_reference, :"G.30", [:cell, :I91]]], [:row, [:sheet_reference, :"G.30", [:cell, :I92]]], [:row, [:sheet_reference, :"G.30", [:cell, :I93]]], [:row, [:sheet_reference, :"G.30", [:cell, :I94]]], [:row, [:sheet_reference, :"G.30", [:cell, :I95]]], [:row, [:sheet_reference, :"G.30", [:cell, :I96]]], [:row, [:sheet_reference, :"G.30", [:cell, :I97]]], [:row, [:sheet_reference, :"G.30", [:cell, :I98]]], [:row, [:sheet_reference, :"G.30", [:cell, :I99]]], [:row, [:sheet_reference, :"G.30", [:cell, :I100]]], [:row, [:sheet_reference, :"G.30", [:cell, :I101]]], [:row, [:sheet_reference, :"G.30", [:cell, :I102]]], [:row, [:sheet_reference, :"G.30", [:cell, :I103]]], [:row, [:sheet_reference, :"G.30", [:cell, :I104]]], [:row, [:sheet_reference, :"G.30", [:cell, :I105]]], [:row, [:inlined_blank]], [:row, [:sheet_reference, :"G.30", [:cell, :I107]]], [:row, [:sheet_reference, :"G.30", [:cell, :I108]]], [:row, [:sheet_reference, :"G.30", [:cell, :I109]]], [:row, [:sheet_reference, :"G.30", [:cell, :I110]]], [:row, [:sheet_reference, :"G.30", [:cell, :I111]]], [:row, [:sheet_reference, :"G.30", [:cell, :I112]]], [:row, [:sheet_reference, :"G.30", [:cell, :I113]]], [:row, [:sheet_reference, :"G.30", [:cell, :I114]]], [:row, [:sheet_reference, :"G.30", [:cell, :I115]]], [:row, [:sheet_reference, :"G.30", [:cell, :I116]]], [:row, [:sheet_reference, :"G.30", [:cell, :I117]]], [:row, [:sheet_reference, :"G.30", [:cell, :I118]]], [:row, [:sheet_reference, :"G.30", [:cell, :I119]]], [:row, [:sheet_reference, :"G.30", [:cell, :I120]]], [:row, [:sheet_reference, :"G.30", [:cell, :I121]]], [:row, [:sheet_reference, :"G.30", [:cell, :I122]]]], [:error, :"#REF!"], [:string, "Steel.OxygenHisarna"], [:error, :"#REF!"], [:string, "G.M.02"]]], [:operator, :+], [:function, :SUMIFS, [:array, [:row, [:sheet_reference, :"G.30", [:cell, :I10]]], [:row, [:sheet_reference, :"G.30", [:cell, :I11]]], [:row, [:sheet_reference, :"G.30", [:cell, :I12]]], [:row, [:sheet_reference, :"G.30", [:cell, :I13]]], [:row, [:sheet_reference, :"G.30", [:cell, :I14]]], [:row, [:sheet_reference, :"G.30", [:cell, :I15]]], [:row, [:sheet_reference, :"G.30", [:cell, :I16]]], [:row, [:sheet_reference, :"G.30", [:cell, :I17]]], [:row, [:sheet_reference, :"G.30", [:cell, :I18]]], [:row, [:sheet_reference, :"G.30", [:cell, :I19]]], [:row, [:sheet_reference, :"G.30", [:cell, :I20]]], [:row, [:sheet_reference, :"G.30", [:cell, :I21]]], [:row, [:sheet_reference, :"G.30", [:cell, :I22]]], [:row, [:sheet_reference, :"G.30", [:cell, :I23]]], [:row, [:sheet_reference, :"G.30", [:cell, :I24]]], [:row, [:sheet_reference, :"G.30", [:cell, :I25]]], [:row, [:sheet_reference, :"G.30", [:cell, :I26]]], [:row, [:sheet_reference, :"G.30", [:cell, :I27]]], [:row, [:sheet_reference, :"G.30", [:cell, :I28]]], [:row, [:sheet_reference, :"G.30", [:cell, :I29]]], [:row, [:sheet_reference, :"G.30", [:cell, :I30]]], [:row, [:sheet_reference, :"G.30", [:cell, :I31]]], [:row, [:sheet_reference, :"G.30", [:cell, :I32]]], [:row, [:sheet_reference, :"G.30", [:cell, :I33]]], [:row, [:sheet_reference, :"G.30", [:cell, :I34]]], [:row, [:sheet_reference, :"G.30", [:cell, :I35]]], [:row, [:sheet_reference, :"G.30", [:cell, :I36]]], [:row, [:sheet_reference, :"G.30", [:cell, :I37]]], [:row, [:sheet_reference, :"G.30", [:cell, :I38]]], [:row, [:sheet_reference, :"G.30", [:cell, :I39]]], [:row, [:sheet_reference, :"G.30", [:cell, :I40]]], [:row, [:sheet_reference, :"G.30", [:cell, :I41]]], [:row, [:sheet_reference, :"G.30", [:cell, :I42]]], [:row, [:sheet_reference, :"G.30", [:cell, :I43]]], [:row, [:sheet_reference, :"G.30", [:cell, :I44]]], [:row, [:sheet_reference, :"G.30", [:cell, :I45]]], [:row, [:sheet_reference, :"G.30", [:cell, :I46]]], [:row, [:sheet_reference, :"G.30", [:cell, :I47]]], [:row, [:sheet_reference, :"G.30", [:cell, :I48]]], [:row, [:sheet_reference, :"G.30", [:cell, :I49]]], [:row, [:sheet_reference, :"G.30", [:cell, :I50]]], [:row, [:sheet_reference, :"G.30", [:cell, :I51]]], [:row, [:sheet_reference, :"G.30", [:cell, :I52]]], [:row, [:sheet_reference, :"G.30", [:cell, :I53]]], [:row, [:sheet_reference, :"G.30", [:cell, :I54]]], [:row, [:sheet_reference, :"G.30", [:cell, :I55]]], [:row, [:sheet_reference, :"G.30", [:cell, :I56]]], [:row, [:sheet_reference, :"G.30", [:cell, :I57]]], [:row, [:sheet_reference, :"G.30", [:cell, :I58]]], [:row, [:sheet_reference, :"G.30", [:cell, :I59]]], [:row, [:sheet_reference, :"G.30", [:cell, :I60]]], [:row, [:sheet_reference, :"G.30", [:cell, :I61]]], [:row, [:sheet_reference, :"G.30", [:cell, :I62]]], [:row, [:sheet_reference, :"G.30", [:cell, :I63]]], [:row, [:sheet_reference, :"G.30", [:cell, :I64]]], [:row, [:sheet_reference, :"G.30", [:cell, :I65]]], [:row, [:sheet_reference, :"G.30", [:cell, :I66]]], [:row, [:sheet_reference, :"G.30", [:cell, :I67]]], [:row, [:sheet_reference, :"G.30", [:cell, :I68]]], [:row, [:sheet_reference, :"G.30", [:cell, :I69]]], [:row, [:sheet_reference, :"G.30", [:cell, :I70]]], [:row, [:sheet_reference, :"G.30", [:cell, :I71]]], [:row, [:sheet_reference, :"G.30", [:cell, :I72]]], [:row, [:sheet_reference, :"G.30", [:cell, :I73]]], [:row, [:sheet_reference, :"G.30", [:cell, :I74]]], [:row, [:sheet_reference, :"G.30", [:cell, :I75]]], [:row, [:sheet_reference, :"G.30", [:cell, :I76]]], [:row, [:sheet_reference, :"G.30", [:cell, :I77]]], [:row, [:sheet_reference, :"G.30", [:cell, :I78]]], [:row, [:sheet_reference, :"G.30", [:cell, :I79]]], [:row, [:sheet_reference, :"G.30", [:cell, :I80]]], [:row, [:sheet_reference, :"G.30", [:cell, :I81]]], [:row, [:sheet_reference, :"G.30", [:cell, :I82]]], [:row, [:sheet_reference, :"G.30", [:cell, :I83]]], [:row, [:sheet_reference, :"G.30", [:cell, :I84]]], [:row, [:sheet_reference, :"G.30", [:cell, :I85]]], [:row, [:sheet_reference, :"G.30", [:cell, :I86]]], [:row, [:sheet_reference, :"G.30", [:cell, :I87]]], [:row, [:sheet_reference, :"G.30", [:cell, :I88]]], [:row, [:sheet_reference, :"G.30", [:cell, :I89]]], [:row, [:sheet_reference, :"G.30", [:cell, :I90]]], [:row, [:sheet_reference, :"G.30", [:cell, :I91]]], [:row, [:sheet_reference, :"G.30", [:cell, :I92]]], [:row, [:sheet_reference, :"G.30", [:cell, :I93]]], [:row, [:sheet_reference, :"G.30", [:cell, :I94]]], [:row, [:sheet_reference, :"G.30", [:cell, :I95]]], [:row, [:sheet_reference, :"G.30", [:cell, :I96]]], [:row, [:sheet_reference, :"G.30", [:cell, :I97]]], [:row, [:sheet_reference, :"G.30", [:cell, :I98]]], [:row, [:sheet_reference, :"G.30", [:cell, :I99]]], [:row, [:sheet_reference, :"G.30", [:cell, :I100]]], [:row, [:sheet_reference, :"G.30", [:cell, :I101]]], [:row, [:sheet_reference, :"G.30", [:cell, :I102]]], [:row, [:sheet_reference, :"G.30", [:cell, :I103]]], [:row, [:sheet_reference, :"G.30", [:cell, :I104]]], [:row, [:sheet_reference, :"G.30", [:cell, :I105]]], [:row, [:inlined_blank]], [:row, [:sheet_reference, :"G.30", [:cell, :I107]]], [:row, [:sheet_reference, :"G.30", [:cell, :I108]]], [:row, [:sheet_reference, :"G.30", [:cell, :I109]]], [:row, [:sheet_reference, :"G.30", [:cell, :I110]]], [:row, [:sheet_reference, :"G.30", [:cell, :I111]]], [:row, [:sheet_reference, :"G.30", [:cell, :I112]]], [:row, [:sheet_reference, :"G.30", [:cell, :I113]]], [:row, [:sheet_reference, :"G.30", [:cell, :I114]]], [:row, [:sheet_reference, :"G.30", [:cell, :I115]]], [:row, [:sheet_reference, :"G.30", [:cell, :I116]]], [:row, [:sheet_reference, :"G.30", [:cell, :I117]]], [:row, [:sheet_reference, :"G.30", [:cell, :I118]]], [:row, [:sheet_reference, :"G.30", [:cell, :I119]]], [:row, [:sheet_reference, :"G.30", [:cell, :I120]]], [:row, [:sheet_reference, :"G.30", [:cell, :I121]]], [:row, [:sheet_reference, :"G.30", [:cell, :I122]]]], [:error, :"#REF!"], [:string, "Steel.Electric"], [:error, :"#REF!"], [:string, "G.M.02"]]], [:operator, :+], [:function, :SUMIFS, [:array, [:row, [:sheet_reference, :"G.30", [:cell, :I10]]], [:row, [:sheet_reference, :"G.30", [:cell, :I11]]], [:row, [:sheet_reference, :"G.30", [:cell, :I12]]], [:row, [:sheet_reference, :"G.30", [:cell, :I13]]], [:row, [:sheet_reference, :"G.30", [:cell, :I14]]], [:row, [:sheet_reference, :"G.30", [:cell, :I15]]], [:row, [:sheet_reference, :"G.30", [:cell, :I16]]], [:row, [:sheet_reference, :"G.30", [:cell, :I17]]], [:row, [:sheet_reference, :"G.30", [:cell, :I18]]], [:row, [:sheet_reference, :"G.30", [:cell, :I19]]], [:row, [:sheet_reference, :"G.30", [:cell, :I20]]], [:row, [:sheet_reference, :"G.30", [:cell, :I21]]], [:row, [:sheet_reference, :"G.30", [:cell, :I22]]], [:row, [:sheet_reference, :"G.30", [:cell, :I23]]], [:row, [:sheet_reference, :"G.30", [:cell, :I24]]], [:row, [:sheet_reference, :"G.30", [:cell, :I25]]], [:row, [:sheet_reference, :"G.30", [:cell, :I26]]], [:row, [:sheet_reference, :"G.30", [:cell, :I27]]], [:row, [:sheet_reference, :"G.30", [:cell, :I28]]], [:row, [:sheet_reference, :"G.30", [:cell, :I29]]], [:row, [:sheet_reference, :"G.30", [:cell, :I30]]], [:row, [:sheet_reference, :"G.30", [:cell, :I31]]], [:row, [:sheet_reference, :"G.30", [:cell, :I32]]], [:row, [:sheet_reference, :"G.30", [:cell, :I33]]], [:row, [:sheet_reference, :"G.30", [:cell, :I34]]], [:row, [:sheet_reference, :"G.30", [:cell, :I35]]], [:row, [:sheet_reference, :"G.30", [:cell, :I36]]], [:row, [:sheet_reference, :"G.30", [:cell, :I37]]], [:row, [:sheet_reference, :"G.30", [:cell, :I38]]], [:row, [:sheet_reference, :"G.30", [:cell, :I39]]], [:row, [:sheet_reference, :"G.30", [:cell, :I40]]], [:row, [:sheet_reference, :"G.30", [:cell, :I41]]], [:row, [:sheet_reference, :"G.30", [:cell, :I42]]], [:row, [:sheet_reference, :"G.30", [:cell, :I43]]], [:row, [:sheet_reference, :"G.30", [:cell, :I44]]], [:row, [:sheet_reference, :"G.30", [:cell, :I45]]], [:row, [:sheet_reference, :"G.30", [:cell, :I46]]], [:row, [:sheet_reference, :"G.30", [:cell, :I47]]], [:row, [:sheet_reference, :"G.30", [:cell, :I48]]], [:row, [:sheet_reference, :"G.30", [:cell, :I49]]], [:row, [:sheet_reference, :"G.30", [:cell, :I50]]], [:row, [:sheet_reference, :"G.30", [:cell, :I51]]], [:row, [:sheet_reference, :"G.30", [:cell, :I52]]], [:row, [:sheet_reference, :"G.30", [:cell, :I53]]], [:row, [:sheet_reference, :"G.30", [:cell, :I54]]], [:row, [:sheet_reference, :"G.30", [:cell, :I55]]], [:row, [:sheet_reference, :"G.30", [:cell, :I56]]], [:row, [:sheet_reference, :"G.30", [:cell, :I57]]], [:row, [:sheet_reference, :"G.30", [:cell, :I58]]], [:row, [:sheet_reference, :"G.30", [:cell, :I59]]], [:row, [:sheet_reference, :"G.30", [:cell, :I60]]], [:row, [:sheet_reference, :"G.30", [:cell, :I61]]], [:row, [:sheet_reference, :"G.30", [:cell, :I62]]], [:row, [:sheet_reference, :"G.30", [:cell, :I63]]], [:row, [:sheet_reference, :"G.30", [:cell, :I64]]], [:row, [:sheet_reference, :"G.30", [:cell, :I65]]], [:row, [:sheet_reference, :"G.30", [:cell, :I66]]], [:row, [:sheet_reference, :"G.30", [:cell, :I67]]], [:row, [:sheet_reference, :"G.30", [:cell, :I68]]], [:row, [:sheet_reference, :"G.30", [:cell, :I69]]], [:row, [:sheet_reference, :"G.30", [:cell, :I70]]], [:row, [:sheet_reference, :"G.30", [:cell, :I71]]], [:row, [:sheet_reference, :"G.30", [:cell, :I72]]], [:row, [:sheet_reference, :"G.30", [:cell, :I73]]], [:row, [:sheet_reference, :"G.30", [:cell, :I74]]], [:row, [:sheet_reference, :"G.30", [:cell, :I75]]], [:row, [:sheet_reference, :"G.30", [:cell, :I76]]], [:row, [:sheet_reference, :"G.30", [:cell, :I77]]], [:row, [:sheet_reference, :"G.30", [:cell, :I78]]], [:row, [:sheet_reference, :"G.30", [:cell, :I79]]], [:row, [:sheet_reference, :"G.30", [:cell, :I80]]], [:row, [:sheet_reference, :"G.30", [:cell, :I81]]], [:row, [:sheet_reference, :"G.30", [:cell, :I82]]], [:row, [:sheet_reference, :"G.30", [:cell, :I83]]], [:row, [:sheet_reference, :"G.30", [:cell, :I84]]], [:row, [:sheet_reference, :"G.30", [:cell, :I85]]], [:row, [:sheet_reference, :"G.30", [:cell, :I86]]], [:row, [:sheet_reference, :"G.30", [:cell, :I87]]], [:row, [:sheet_reference, :"G.30", [:cell, :I88]]], [:row, [:sheet_reference, :"G.30", [:cell, :I89]]], [:row, [:sheet_reference, :"G.30", [:cell, :I90]]], [:row, [:sheet_reference, :"G.30", [:cell, :I91]]], [:row, [:sheet_reference, :"G.30", [:cell, :I92]]], [:row, [:sheet_reference, :"G.30", [:cell, :I93]]], [:row, [:sheet_reference, :"G.30", [:cell, :I94]]], [:row, [:sheet_reference, :"G.30", [:cell, :I95]]], [:row, [:sheet_reference, :"G.30", [:cell, :I96]]], [:row, [:sheet_reference, :"G.30", [:cell, :I97]]], [:row, [:sheet_reference, :"G.30", [:cell, :I98]]], [:row, [:sheet_reference, :"G.30", [:cell, :I99]]], [:row, [:sheet_reference, :"G.30", [:cell, :I100]]], [:row, [:sheet_reference, :"G.30", [:cell, :I101]]], [:row, [:sheet_reference, :"G.30", [:cell, :I102]]], [:row, [:sheet_reference, :"G.30", [:cell, :I103]]], [:row, [:sheet_reference, :"G.30", [:cell, :I104]]], [:row, [:sheet_reference, :"G.30", [:cell, :I105]]], [:row, [:inlined_blank]], [:row, [:sheet_reference, :"G.30", [:cell, :I107]]], [:row, [:sheet_reference, :"G.30", [:cell, :I108]]], [:row, [:sheet_reference, :"G.30", [:cell, :I109]]], [:row, [:sheet_reference, :"G.30", [:cell, :I110]]], [:row, [:sheet_reference, :"G.30", [:cell, :I111]]], [:row, [:sheet_reference, :"G.30", [:cell, :I112]]], [:row, [:sheet_reference, :"G.30", [:cell, :I113]]], [:row, [:sheet_reference, :"G.30", [:cell, :I114]]], [:row, [:sheet_reference, :"G.30", [:cell, :I115]]], [:row, [:sheet_reference, :"G.30", [:cell, :I116]]], [:row, [:sheet_reference, :"G.30", [:cell, :I117]]], [:row, [:sheet_reference, :"G.30", [:cell, :I118]]], [:row, [:sheet_reference, :"G.30", [:cell, :I119]]], [:row, [:sheet_reference, :"G.30", [:cell, :I120]]], [:row, [:sheet_reference, :"G.30", [:cell, :I121]]], [:row, [:sheet_reference, :"G.30", [:cell, :I122]]]], [:error, :"#REF!"], [:string, "Steel.ElectricDRI"], [:error, :"#REF!"], [:string, "G.M.02"]]]	[:error, :"#VALUE!"]
+
+# Inlined blanks
+[:function, :VLOOKUP, [:inlined_blank], [:array, [:row, [:inlined_blank], [:inlined_blank]]], [:number, 2], [:boolean_false]]	[:error, :"#N/A"]
+
